--- a/test4/index.html
+++ b/test4/index.html
@@ -51,48 +51,92 @@ body{
 
 <script>
 let questions = [
-{q:"Windows application packaging is mainly used to",o:["Design UI","Standardize, deploy, update, repair, and uninstall applications efficiently","Monitor networks","Develop OS"],a:"Standardize, deploy, update, repair, and uninstall applications efficiently"},
-{q:"Which command is used to install an MSI package?",o:["install.exe","msiexec /i package.msi","msi /add","setup /i"],a:"msiexec /i package.msi"},
-{q:"Which command is used to uninstall an MSI package?",o:["remove.exe","msiexec /x package.msi","msi /delete","uninstall.cmd"],a:"msiexec /x package.msi"},
-{q:"The Windows Installer service is also known as",o:["InstallerSvc","MSIEXEC","WinSetup","AppInstaller"],a:"MSIEXEC"},
-{q:"Repairing an MSI package is done using",o:["msiexec /r","msiexec /f","repair.exe","fix.cmd"],a:"msiexec /f"},
-{q:"MSI stands for",o:["Microsoft Software Installer","Microsoft Installer","Managed Setup Installer","Modern Setup Interface"],a:"Microsoft Installer"},
-{q:"Which file extension is used for Windows Installer packages?",o:[".exe",".msi",".pkg",".zip"],a:".msi"},
-{q:"The main purpose of MSI packaging is",o:["Manual install","Consistent and silent application deployment","Gaming","Hardware tuning"],a:"Consistent and silent application deployment"},
-{q:"NTFS stands for",o:["New Technology File System","Network Transfer File System","Next Tech File Store","New Type Format System"],a:"New Technology File System"},
-{q:"FAT file system does NOT support",o:["USB","Boot sector","File permissions, encryption, compression","Small disks"],a:"File permissions, encryption, compression"},
-{q:"Which file system supports encryption and compression?",o:["FAT32","exFAT","NTFS","UFS"],a:"NTFS"},
-{q:"Windows services run in the background and are managed by",o:["Task Manager","Service Control Manager","Registry","Explorer"],a:"Service Control Manager"},
-{q:"The Print Spooler service is used to",o:["Scan documents","Manage print jobs","Install drivers","Share printers"],a:"Manage print jobs"},
-{q:"If Print Spooler service stops,",o:["PC shuts down","Printing will not work","Only scan fails","Drivers uninstall"],a:"Printing will not work"},
-{q:"User management in Windows controls",o:["Only passwords","Users, groups, permissions, profiles","CPU","Storage"],a:"Users, groups, permissions, profiles"},
-{q:"Application behavior in user devices depends on",o:["Monitor","User permissions and environment","Keyboard","Mouse"],a:"User permissions and environment"},
-{q:"File and folder permissions are controlled using",o:["FAT rules","NTFS permissions","Firewall","BIOS"],a:"NTFS permissions"},
-{q:"Registry permissions are required when an application",o:["Reads files","Writes or modifies registry keys","Accesses network","Uses RAM"],a:"Writes or modifies registry keys"},
-{q:"Least privilege principle means",o:["Full admin access","Giving users minimum required permissions","No access","Temporary access"],a:"Giving users minimum required permissions"},
-{q:"Application packaging end-to-end process starts with",o:["Testing","Requirement gathering","Deployment","Installation"],a:"Requirement gathering"},
-{q:"Application packaging lab setup mainly includes",o:["Office apps","Clean VM, tools, snapshots","Production data","User profiles"],a:"Clean VM, tools, snapshots"},
-{q:"Which is NOT a method of application packaging?",o:["MSI","MSIX","PSADT","Manual end-user installation"],a:"Manual end-user installation"},
-{q:"PSADT stands for",o:["PowerShell App Deployment Toolkit","Program Setup Automation Tool","Package System Tool","Power Setup Tool"],a:"PowerShell App Deployment Toolkit"},
-{q:"PSADT is mainly used for",o:["UI design","Application deployment automation","Gaming","Monitoring"],a:"Application deployment automation"},
-{q:"SCCM stands for",o:["System Control Center Manager","System Center Configuration Manager","Secure Client Config Manager","Software Config Module"],a:"System Center Configuration Manager"},
-{q:"SCCM is used to",o:["Design apps","Deploy and manage applications and devices","Write code","Train users"],a:"Deploy and manage applications and devices"},
-{q:"MSIX is a modern packaging format that combines",o:["ZIP and EXE","MSI and AppX features","APK and IPA","CAB and DLL"],a:"MSI and AppX features"},
-{q:"One major benefit of MSIX is",o:["Fast boot","Clean install and uninstall","Better UI","Gaming"],a:"Clean install and uninstall"},
-{q:"MSIX architecture provides",o:["High graphics","Application isolation and security","Driver control","Network speed"],a:"Application isolation and security"},
-{q:"A current limitation of MSIX is",o:["Large size","Limited support for drivers and services","Slow UI","No logs"],a:"Limited support for drivers and services"},
-{q:"Microsoft MSIX Packaging Tool is used to",o:["Edit registry","Convert traditional apps to MSIX","Install drivers","Create services"],a:"Convert traditional apps to MSIX"},
-{q:"Which property uniquely identifies an MSI product?",o:["ProductName","ProductCode","UpgradeCode","Version"],a:"ProductCode"},
-{q:"Which component contains compressed installer files?",o:["DLL","CAB file","INI","LOG"],a:"CAB file"},
-{q:"FAT32 limitation includes",o:["No folders","Maximum file size of 4GB","No boot","No USB"],a:"Maximum file size of 4GB"},
-{q:"NTFS journaling helps mainly in",o:["Fast UI","Faster recovery after system crashes","Gaming speed","Less RAM"],a:"Faster recovery after system crashes"},
-{q:"User-specific application settings are stored in",o:["HKLM","HKEY_CURRENT_USER (HKCU)","HKEY_USERS","HKCR"],a:"HKEY_CURRENT_USER (HKCU)"},
-{q:"Which permission allows changing file contents?",o:["Read","Write","Modify","Execute"],a:"Modify"},
-{q:"Main purpose of application packaging is",o:["Design","Reliable and standardized deployment","Testing","Marketing"],a:"Reliable and standardized deployment"},
-{q:"Clean VM is required in packaging to",o:["Increase speed","Avoid capturing unwanted changes","Save space","Add tools"],a:"Avoid capturing unwanted changes"},
-{q:"Registry access is controlled using",o:["Firewall","Registry permissions","Antivirus","Services"],a:"Registry permissions"},
-{q:"Which file system supports compression?",o:["FAT","FAT32","NTFS","exFAT"],a:"NTFS"},
-{q:"MSIX is preferred because it offers",o:["Speed","Security, reliability, clean uninstall","Graphics","Compatibility only"],a:"Security, reliability, clean uninstall"}
+let questions = [
+{q:"Windows application packaging is mainly used to",o:["Develop software","Design UI","Standardize and deploy applications","Write code"],a:"Standardize and deploy applications"},
+{q:"Which command is used to install an MSI package?",o:["setup.exe","install.msi","msiexec /i package.msi","run.exe"],a:"msiexec /i package.msi"},
+{q:"Which command is used to uninstall an MSI package?",o:["msiexec /i","remove.exe","msiexec /x package.msi","delete.msi"],a:"msiexec /x package.msi"},
+{q:"The Windows Installer service is also known as",o:["InstallerService","WindowsSetup","MSIEXEC","AppService"],a:"MSIEXEC"},
+{q:"Repairing an MSI package is done using",o:["msiexec /x","msiexec /i","msiexec /f","msiexec /r"],a:"msiexec /f"},
+{q:"MSI stands for",o:["Microsoft Software Installer","Microsoft Installer","Modular System Installer","Managed Software Interface"],a:"Microsoft Installer"},
+{q:"Which file extension is used for Windows Installer packages?",o:[".exe",".zip",".msi",".cab"],a:".msi"},
+{q:"The main purpose of MSI packaging is",o:["Code execution","UI enhancement","Silent and consistent deployment","Performance testing"],a:"Silent and consistent deployment"},
+{q:"NTFS stands for",o:["Network Transfer File System","New Technical File Storage","New Technology File System","Network Type File System"],a:"New Technology File System"},
+{q:"FAT file system does NOT support",o:["USB drives","Large disks","File permissions and encryption","File storage"],a:"File permissions and encryption"},
+{q:"Which file system supports encryption and compression?",o:["FAT","FAT32","exFAT","NTFS"],a:"NTFS"},
+{q:"Windows services run in the background and are managed by",o:["Task Manager","Control Panel","Service Control Manager","Windows Explorer"],a:"Service Control Manager"},
+{q:"The Print Spooler service is used to",o:["Install printers","Scan documents","Manage print jobs","Share printers"],a:"Manage print jobs"},
+{q:"If Print Spooler service stops",o:["System crashes","Printer driver fails","Printing will not work","Network disconnects"],a:"Printing will not work"},
+{q:"User management in Windows controls",o:["Hardware devices","Network cables","Users, groups, and permissions","BIOS settings"],a:"Users, groups, and permissions"},
+{q:"Application behavior in user devices depends on",o:["CPU speed","RAM size","User permissions and environment","Screen resolution"],a:"User permissions and environment"},
+{q:"File and folder permissions are controlled using",o:["FAT","BIOS","NTFS permissions","Registry"],a:"NTFS permissions"},
+{q:"Registry permissions are required when an application",o:["Reads files","Uses RAM","Writes to registry keys","Accesses CPU"],a:"Writes to registry keys"},
+{q:"Least privilege principle means",o:["Grant admin rights","Grant full control","Grant minimum required access","Deny all access"],a:"Grant minimum required access"},
+{q:"Application packaging end-to-end process starts with",o:["Deployment","Testing","Requirement gathering","Installation"],a:"Requirement gathering"},
+{q:"Application packaging lab setup mainly includes",o:["Antivirus only","Internet connection","Clean VM and packaging tools","User workstation"],a:"Clean VM and packaging tools"},
+{q:"Which is NOT a method of application packaging?",o:["MSI","MSIX","Scripted packaging","Manual end-user installation"],a:"Manual end-user installation"},
+{q:"PSADT stands for",o:["PowerShell Admin Tool","Package Setup Automation Tool","PowerShell App Deployment Toolkit","Program Software Deployment Tool"],a:"PowerShell App Deployment Toolkit"},
+{q:"PSADT is mainly used for",o:["Coding applications","Monitoring systems","Automated application deployment","Virus scanning"],a:"Automated application deployment"},
+{q:"SCCM stands for",o:["Software Center Configuration Manager","System Client Configuration Manager","System Center Configuration Manager","Software Control Configuration Module"],a:"System Center Configuration Manager"},
+{q:"SCCM is used to",o:["Write code","Design software","Deploy and manage applications","Edit registry"],a:"Deploy and manage applications"},
+{q:"MSIX is a modern packaging format that combines",o:["EXE + ZIP","MSI + CAB","MSI + AppX","BAT + EXE"],a:"MSI + AppX"},
+{q:"One major benefit of MSIX is",o:["Faster coding","Smaller file size","Clean uninstall","Free licensing"],a:"Clean uninstall"},
+{q:"MSIX architecture provides",o:["Kernel access","Performance tuning","Isolation and security","Driver control"],a:"Isolation and security"},
+{q:"A current limitation of MSIX is",o:["Large size","Slow execution","Limited support for drivers and services","No UI"],a:"Limited support for drivers and services"},
+{q:"Microsoft MSIX Packaging Tool is used to",o:["Create EXE files","Edit registry","Convert apps to MSIX","Debug applications"],a:"Convert apps to MSIX"},
+{q:"MSI to MSIX feasibility analysis checks",o:["File size","UI design","Application compatibility","User count"],a:"Application compatibility"},
+{q:"Editing an existing MSIX package can be done using",o:["Notepad","Registry Editor","MSIX Packaging Tool","Control Panel"],a:"MSIX Packaging Tool"},
+{q:"Package information fields include",o:["IP address","MAC address","Name, version, publisher","RAM usage"],a:"Name, version, publisher"},
+{q:"Standard rules in packaging ensure",o:["Faster systems","More storage","Consistency and quality","Better graphics"],a:"Consistency and quality"},
+{q:"Which command is used to uninstall an MSI application?",o:["msiexec /i","msiexec /f","msiexec /x","msiexec /r"],a:"msiexec /x"},
+{q:"Which command repairs a damaged MSI installation?",o:["msiexec /x","msiexec /i","msiexec /f","msiexec /u"],a:"msiexec /f"},
+{q:"Silent installation mainly helps administrators by",o:["Reducing file size","Improving UI","Deploying apps without user interaction","Increasing speed"],a:"Deploying apps without user interaction"},
+{q:"Which file stores MSI installation data tables?",o:["EXE file","CAB file","MSI database","LOG file"],a:"MSI database"},
+{q:"Which property uniquely identifies an MSI product?",o:["PackageName","Version","ProductCode","UpgradeCode"],a:"ProductCode"},
+{q:"Which component contains compressed installer files?",o:["MSI","EXE","CAB","DLL"],a:"CAB"},
+{q:"Which file system supports encryption and permissions?",o:["FAT","FAT32","exFAT","NTFS"],a:"NTFS"},
+{q:"FAT32 limitation includes",o:["Slow speed","No USB support","4GB maximum file size","No formatting"],a:"4GB maximum file size"},
+{q:"NTFS journaling helps mainly in",o:["Increasing speed","Saving space","Recovering after crashes","Encryption"],a:"Recovering after crashes"},
+{q:"Which service manages print jobs in Windows?",o:["Printer Manager","Device Manager","Print Spooler","Task Scheduler"],a:"Print Spooler"},
+{q:"If Print Spooler service stops, what happens?",o:["PC shuts down","Printer uninstalls","Printing stops","Network disconnects"],a:"Printing stops"},
+{q:"User-specific application settings are stored in",o:["HKLM","HKCR","HKCU","HKU"],a:"HKCU"},
+{q:"Per-user installation affects",o:["All users","Admin users","Only the logged-in user","Guest users"],a:"Only the logged-in user"},
+{q:"Which permission allows changing file contents?",o:["Read","Execute","Modify","List"],a:"Modify"},
+{q:"Registry permission issues may cause",o:["Faster apps","Better performance","Application failures","No effect"],a:"Application failures"},
+{q:"NTFS permissions apply to",o:["Registry only","Memory","Files and folders","Services"],a:"Files and folders"},
+{q:"Main purpose of application packaging is",o:["Software design","UI testing","Reliable and standardized deployment","Hardware testing"],a:"Reliable and standardized deployment"},
+{q:"Clean VM is required in packaging to",o:["Increase speed","Save space","Avoid unwanted captures","Improve graphics"],a:"Avoid unwanted captures"},
+{q:"First phase of application packaging lifecycle is",o:["Deployment","Testing","Application analysis","Maintenance"],a:"Application analysis"},
+{q:"PSADT is mainly used to",o:["Monitor systems","Create drivers","Deploy applications silently","Manage hardware"],a:"Deploy applications silently"},
+{q:"PSADT scripts are written in",o:["Python","Batch","PowerShell","Java"],a:"PowerShell"},
+{q:"Logging in PSADT helps to",o:["Increase speed","Reduce size","Troubleshoot issues","Improve UI"],a:"Troubleshoot issues"},
+{q:"SCCM is primarily used for",o:["Coding","Database design","Enterprise device and app management","Network wiring"],a:"Enterprise device and app management"},
+{q:"SCCM collections are used to",o:["Store files","Save logs","Target users or devices","Create packages"],a:"Target users or devices"},
+{q:"Deployment issues are identified using",o:["Control Panel","Task Manager","Logs and reports","Registry Editor"],a:"Logs and reports"},
+{q:"MSIX improves security by",o:["Encryption","Antivirus","Application containerization","Passwords"],a:"Application containerization"},
+{q:"MSIX uninstall is clean because",o:["Faster uninstall","Smaller size","No leftover files or registry entries","No reboot"],a:"No leftover files or registry entries"},
+{q:"MSIX architecture is based on",o:["Kernel model","Driver model","Containerized application model","Service model"],a:"Containerized application model"},
+{q:"Which tool converts MSI to MSIX?",o:["SCCM","PSADT","MSIX Packaging Tool","Intune"],a:"MSIX Packaging Tool"},
+{q:"MSI-to-MSIX feasibility analysis checks",o:["App UI","File size","Unsupported components","Vendor name"],a:"Unsupported components"},
+{q:"Package metadata includes",o:["IP address","Port number","App name, version, vendor","CPU usage"],a:"App name, version, vendor"},
+{q:"Intune is mainly used for",o:["On-prem deployment","Coding apps","Cloud-based device and app management","Hardware repair"],a:"Cloud-based device and app management"},
+{q:"Intune requires which to deploy apps?",o:["LAN cable","SCCM server","Azure AD and internet","USB drive"],a:"Azure AD and internet"},
+{q:"Package naming standards help in",o:["Faster execution","Less storage","Easy identification and management","Better UI"],a:"Easy identification and management"},
+{q:"Version control helps in",o:["Saving memory","Faster installs","Tracking changes","Antivirus protection"],a:"Tracking changes"},
+{q:"Vendor name is stored in",o:["Registry","File system","Package metadata","Logs"],a:"Package metadata"},
+{q:"Registry access is controlled using",o:["NTFS","Group Policy","Registry permissions","BIOS"],a:"Registry permissions"},
+{q:"Application repair is used when",o:["App works fine","App is updated","Installation is corrupted","App is removed"],a:"Installation is corrupted"},
+{q:"Which file system supports compression?",o:["FAT","FAT32","exFAT","NTFS"],a:"NTFS"},
+{q:"Packaging lab should NOT contain",o:["Clean OS","Packaging tools","Snapshots","Unnecessary pre-installed apps"],a:"Unnecessary pre-installed apps"},
+{q:"Windows services usually start",o:["Randomly","After login only","Automatically or manually","On shutdown"],a:"Automatically or manually"},
+{q:"Full Control permission allows",o:["Read only","Modify only","Complete access including permission changes","Execute only"],a:"Complete access including permission changes"},
+{q:"MSIX limitations mostly affect",o:["New apps","Store apps","Legacy applications","Cloud apps"],a:"Legacy applications"},
+{q:"SCCM reporting helps admins to",o:["Write code","Design UI","Monitor deployment status","Install OS"],a:"Monitor deployment status"},
+{q:"Application behavior testing is done in",o:["Production","User system","Test/UAT environment","BIOS"],a:"Test/UAT environment"},
+{q:"End-to-end packaging ensures",o:["Faster coding","Less storage","Quality and reliability","Better graphics"],a:"Quality and reliability"},
+{q:"Print Spooler service belongs to",o:["Drivers","Applications","Windows Services","Registry"],a:"Windows Services"},
+{q:"NTFS permissions are useful for",o:["Performance tuning","Backup","Security and access control","Compression only"],a:"Security and access control"},
+{q:"Application deployment failure is checked using",o:["Control Panel","File Explorer","Logs (SCCM / Event Viewer)","BIOS"],a:"Logs (SCCM / Event Viewer)"},
+{q:"MSIX is preferred because it offers",o:["Larger files","Faster coding","Security, reliability, clean uninstall","Manual control"],a:"Security, reliability, clean uninstall"}
 ];
 
 let index=0,answers=[],timer,timeLeft=15,totalTime=0,locked=false;
